--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,19 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
-  file_picker: ^8.0.6
-  firebase_auth: ^5.1.2
-  firebase_storage: ^12.1.1
   flutter:
     sdk: flutter
-  just_audio: ^0.9.39
+  cupertino_icons: ^1.0.6
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.2
+  firebase_storage: ^11.2.0
+  cloud_firestore: ^4.7.1
+  file_picker: ^5.3.2
+  just_audio: ^0.9.34
+  audio_session: ^0.1.16
+  rxdart: ^0.27.7
+  share_plus: ^10.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +28,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+# assets:
+#   - images/
